force-app/main/default/objects/SalesTeam__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Endereço exibido no PDF de pedidos</inlineHelpText>
    <label>Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>