force-app/main/default/objects/SalesTeam__c/fields/BillingSalesTeam__c.field-meta.xml
<CustomField>
    <fullName>BillingSalesTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipe de Vendas de Faturamento</label>
    <referenceTo>SalesTeam__c</referenceTo>
    <relationshipLabel>Equipes de Vendas de Faturamento</relationshipLabel>
    <relationshipName>Equipe_de_Vendas_de_Faturamento</relationshipName>
    <type>Lookup</type>
</CustomField>