force-app/main/default/objects/SalesTeam__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Cidade exibida no PDF de pedidos</inlineHelpText>
    <label>Cidade</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Equipes de Vendas</relationshipLabel>
    <relationshipName>SalesTeams</relationshipName>
    <type>Lookup</type>
</CustomField>