force-app/main/default/objects/SalesTeam__c/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <inlineHelpText>CNPJ exibido no PDF de pedidos</inlineHelpText>
    <label>CNPJ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>