force-app/main/default/objects/SalesTeam__c/fields/DeliveryDays__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDays__c</fullName>
    <label>Quantidade Dias de Entrega</label>
    <inlineHelpText>Campo que armazena a quantidade de dias que será adiconada as datas de remessa vencidas no ato da integração.</inlineHelpText>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>