force-app/main/default/objects/SalesTeam__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <inlineHelpText>Nome exibido no PDF de pedidos</inlineHelpText>
    <label>Nome de Exibição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>