force-app/main/default/objects/SalesTeam__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Centro de Distribuição</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Equipes de Vendas</relationshipLabel>
    <relationshipName>SalesTeams</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>