force-app/main/default/objects/SalesTeam__c/fields/IE__c.field-meta.xml
<CustomField>
    <fullName>IE__c</fullName>
    <inlineHelpText>Inscrição Estadual exibida no PDF de pedidos</inlineHelpText>
    <label>Inscrição Estadual</label>
    <length>20</length>
    <type>Text</type>
</CustomField>