force-app/main/default/objects/SalesTeam__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesTeams</relationshipName>
    <type>Lookup</type>
</CustomField>