force-app/main/default/objects/SalesTeam__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Escritório de Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Equipes de Vendas</relationshipLabel>
    <relationshipName>SalesTeams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>