force-app/main/default/objects/SalesTeam__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <inlineHelpText>CEP exibido no PDF de pedidos</inlineHelpText>
    <label>CEP</label>
    <length>9</length>
    <type>Text</type>
</CustomField>