force-app/main/default/objects/SalesTeam__c/fields/SalesOfficeExternalId__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeExternalId__c</fullName>
    <formula>ParentId__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Escritorio de Vendas</label>
    <type>Text</type>
</CustomField>