force-app/main/default/objects/SalesTeam__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Equipes de Vendas</relationshipLabel>
    <relationshipName>SalesTeams</relationshipName>
    <type>Lookup</type>
</CustomField>