force-app/main/default/objects/SalesTeam__c/fields/SalesOrgExternalId__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgExternalId__c</fullName>
    <formula>SalesOrg__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código da Organização de Vendas</label>
    <type>Text</type>
</CustomField>