force-app/main/default/objects/SalesTeam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId__c</columns>
    <columns>NAME</columns>
    <columns>ParentId__c</columns>
    <columns>Manager__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SalesOrg__c</columns>
    <columns>DistributionCenter__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>